[package]
name = "ensicoin_messages"
version = "0.6.1"
authors = ["Quentin Boyer <qbsecond@gmail.com>"]
edition = "2018"

description = "Data types used in the ensicoin protocol"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EnsicoinDevs/ensicoin-message"

[dependencies]
ensicoin_serializer = "^2.0.0"
ensicoin_serializer_derive = "^0.2"
bytes = "^0.4"
generic-array = {version = "^0.12.0" }
sha2 = "^0.8.0"
